# Amazon-price-alert

./: AmazonPriceMonitor.spec  README.md  build.py  gui.py  price_monitor.py  products.json  pyproject.toml  replit.nix
AmazonPriceTracker/: amazon_checkout.py  config.py
